--- a/sass/layout/_subscription.scss
+++ b/sass/layout/_subscription.scss
@@ -16,10 +16,10 @@
         text-transform: uppercase;
         border-radius: 22px;
         box-shadow: 0px 6px 12px rgba(82, 67, 194, 0.16);;
-        background-color: var(--color-rose);
+        background-color: var(--color-white);
         font-family: var(--main-font-family);
         font-weight: var(--medium-font-weight);
-        color: var(--color-white);
+        color: var(--color-purple);
         line-height: 18px;
         font-size: 12px;
     }
