--- a/sass/layout/_subscription.scss
+++ b/sass/layout/_subscription.scss
@@ -24,3 +24,9 @@
         font-size: 12px;
     }
 }
+
+@media screen and (min-width: 1199px) {
+    .subscription {
+        padding: 0px;
+    }
+}
