--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,7 @@ button {
 
 .active-plan {
   background-color: var(--color-purple) !important;
+  box-shadow: 0px 42px 34px rgba(82, 67, 194, 0.295755);
 }
 .active-plan > h3 {
   color: #ffffff !important;
@@ -69,6 +70,15 @@ button {
   background-color: var(--color-rose) !important;
 }
 
+@media screen and (min-width: 1199px) {
+  .active-plan {
+    position: relative;
+    top: -26px;
+  }
+  .active-plan > p {
+    padding-top: 26px;
+  }
+}
 .price {
   padding: 41px 16px 32px 16px;
 }
@@ -77,6 +87,7 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-right: 122px;
 }
 .price-position > h2 {
   font-family: var(--main-font-family);
@@ -94,34 +105,54 @@ button {
   line-height: 27px;
 }
 
+@media screen and (min-width: 1199px) {
+  .price {
+    width: 926px;
+    margin: auto;
+    display: flex;
+    align-items: flex-end;
+    padding: 0px;
+  }
+  .price-position {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+.header {
+  padding: 32px 24px 32px 24px;
+}
+
+.header-position {
+  display: flex;
+  justify-content: space-between;
+}
+
+.burger {
+  width: 22px;
+  height: 15px;
+  fill: var(--color-purple);
+}
+
+.logo-position {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  width: 22px;
+  height: 30px;
+}
+
+.logo-name {
+  font-family: var(--main-font-family);
+  font-weight: var(--bold-font-weight);
+  color: var(--color-purple);
+}
+
 @media screen and (max-width: 1199px) {
-  .header {
-    padding: 32px 24px 32px 24px;
-  }
-  .header-position {
-    display: flex;
-    justify-content: space-between;
-  }
-  .burger {
-    width: 22px;
-    height: 15px;
-    fill: var(--color-purple);
-  }
-  .logo-position {
-    display: flex;
-    align-items: center;
-  }
   .join {
     display: none;
-  }
-  .logo {
-    width: 22px;
-    height: 30px;
-  }
-  .logo-name {
-    font-family: var(--main-font-family);
-    font-weight: var(--bold-font-weight);
-    color: var(--color-purple);
   }
 }
 @media screen and (min-width: 1199px) {
@@ -167,6 +198,11 @@ button {
   font-size: 12px;
 }
 
+@media screen and (min-width: 1199px) {
+  .subscription {
+    padding: 0px;
+  }
+}
 .plans {
   padding: 32px 16px 64px 16px;
 }
@@ -243,4 +279,30 @@ button {
 .circle {
   width: 20px;
   margin-right: 10px;
+}
+
+@media screen and (min-width: 1199px) {
+  .plans {
+    padding: 90px 0px 0px 0px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 937px;
+  }
+  .plans-position {
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: stretch;
+    margin-bottom: 69px;
+  }
+  .choose-plan {
+    margin: 40px 34px 40px 34px;
+    padding: 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 232px;
+  }
+  .choose-plan > p {
+    margin-top: 40px;
+  }
 }/*# sourceMappingURL=main.css.map */
