--- a/sass/components/_active.scss
+++ b/sass/components/_active.scss
@@ -5,6 +5,7 @@
 
 .active-plan{
     background-color: var(--color-purple) !important;
+    box-shadow: 0px 42px 34px rgba(82, 67, 194, 0.295755);
     >h3{
         color: #ffffff !important;
     }
@@ -21,5 +22,17 @@
     >button{
         background-color: var(--color-rose) !important;
     }
-    
 }
+
+@media screen and (min-width: 1199px) {
+    .active-plan {
+        position: relative;
+        top: -26px;
+        // margin-top: 26px;
+        // height: 500px;
+        >p{
+            padding-top: 26px;
+        }
+    }
+}
+                
