--- a/sass/layout/_plans.scss
+++ b/sass/layout/_plans.scss
@@ -76,25 +76,28 @@
     margin-right: 10px;
 }
 
-// .subscription-position{
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     background-color: var(--color-white);
-//     border-radius: 22px;
-//     width: 250px;
-//     margin: auto;
-//     >button{
-//         height: 44px;
-//         width: 125px;
-//         text-transform: uppercase;
-//         border-radius: 22px;
-//         box-shadow: 0px 6px 12px rgba(82, 67, 194, 0.16);;
-//         background-color: var(--color-rose);
-//         font-family: var(--main-font-family);
-//         font-weight: var(--medium-font-weight);
-//         color: var(--color-white);
-//         line-height: 18px;
-//         font-size: 12px;
-//     }
-// }
+@media screen and (min-width: 1199px) {
+    .plans {
+        padding: 90px 0px 0px 0px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 937px;
+    }
+    .plans-position {
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: stretch;
+        margin-bottom: 69px;
+    }
+    .choose-plan {
+        margin: 40px 34px 40px 34px;
+        padding: 0px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 232px;
+        >p{
+            margin-top: 40px
+        }
+    }
+}
