--- a/sass/components/_active.scss
+++ b/sass/components/_active.scss
@@ -4,19 +4,17 @@
 }
 
 .active-plan{
-    background-color: var(--color-purple) !important;
-    box-shadow: 0px 42px 34px rgba(82, 67, 194, 0.295755);
-    >h3{
+    >div>h3{
         color: #ffffff !important;
     }
 
-    >p{
+    >div>p{
         color: #ffffff !important;
         >span{
             color: #ffffff !important;
         }
     }
-    >ul>li{
+    >div>ul>li{
         color: #ffffff !important;
     }
     >button{
@@ -24,15 +22,82 @@
     }
 }
 
-@media screen and (min-width: 1199px) {
+@media screen and (max-width: 1200px) {
     .active-plan {
-        position: relative;
-        top: -26px;
-        // margin-top: 26px;
-        // height: 500px;
-        >p{
-            padding-top: 26px;
-        }
+        background-color: var(--color-purple) !important;
+        box-shadow: 0px 42px 34px rgba(82, 67, 194, 0.295755);
+    }
+    .active-background {
+        background-color: var(--color-purple) !important;
+        box-shadow: 0px 42px 34px rgba(82, 67, 194, 0.295755);
+        padding: 20px 30px 20px 30px;
+        border-radius: 26px;
+        margin-top: 32px;
+        margin-bottom: 8px;
     }
 }
-                
+
+@media screen and (min-width: 1200px) {
+    .active-background {
+        position: relative;
+        top: -20px;
+        height: 473px;
+        background-color: var(--color-purple) !important;
+        box-shadow: 0px 42px 34px rgba(82, 67, 194, 0.295755);
+        padding: 35px 30px 20px 30px;
+        border-radius: 26px;
+    }
+}
+
+.animation-open{
+    animation: open-anim 0.8s linear infinite;
+    animation-iteration-count: 1;
+}
+
+.animation-close{
+    animation: close-anim 0.7s linear infinite;
+    animation-iteration-count: 1;
+}
+
+@keyframes open-anim {
+    25% {
+        opacity: 0.7;
+    }
+    45% {
+        opacity: 0.8;
+    }
+    75% {
+        opacity: 0.9;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes close-anim {
+    from{
+        background-color: var(--color-rose);
+    }
+    to{
+        background-color: var(--color-white);
+    }
+    // 100% {
+    //     opacity: 1;
+    // }
+
+    // 75% {
+    //     opacity: 0.7;
+    // }
+
+    // 45% {
+    //     opacity: 0.5;
+    // }
+
+    // 15% {
+    //     opacity: 0.3;
+    // }
+
+    // 0% {
+    //     opacity: 0;
+    // }
+}
