--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -29,13 +29,13 @@
   color: var(--color-purple);
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (max-width: 1200px) {
   .join {
     display: none;
   }
 }
 
-@media screen and (min-width: 1199px) {
+@media screen and (min-width: 1200px) {
   .header {
       padding: 32px 50px 73px 50px;
     }
@@ -50,5 +50,8 @@
     font-size: 14px;
     line-height: 18px;
     color: #ffffff;
+  }
+  .join:hover{
+    background-color: var(--color-btn);
   }
 }
