--- a/sass/layout/_plans.scss
+++ b/sass/layout/_plans.scss
@@ -13,42 +13,29 @@
 }
 
 .choose-plan{
-    padding: 32px 28px 48px 28px;
     border-radius: 26px;
-    margin: 8px;
-    >div{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 26px;
-        color: var(--color-rose);
-        background-color: #403879;
-        width: 121px;
-        height: 27px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 20px;
-        font-family: var(--main-font-family);
-        font-weight: 800;
-        line-height: 15px;
-        font-size: 10px;
-    }
-    >p{
-        font-size: 17px;
-    }
-    >h3{
-        margin-top: 20px;
-        color: var(--color-purple);
-        line-height: 42px;
-        font-size: 28px;
-    }
-    >button{
-        background-color: var(--color-purple);
-        border-radius: 24px;
-        width: 232px;
-        height: 45px;
-        color: var(--color-white);
-    }
+    margin-top: 32px;
+    margin-bottom: 32px;
+    width: 232px;
+    cursor: pointer;
+}
+
+.most-popular {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 26px;
+    color: var(--color-rose);
+    background-color: #403879;
+    width: 121px;
+    height: 27px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 25px;
+    font-family: var(--main-font-family);
+    font-weight: 800;
+    line-height: 15px;
+    font-size: 10px;
 }
 
 .description{
@@ -57,18 +44,44 @@
     color: #848199;
     line-height: 25px;
     font-size: 15px;
-    >span {
-        font-family: var(--main-font-family);
-        font-weight: var(--bold-font-weight);
-        color: var(--color-purple);
-        line-height: 46px;
-        font-size: 36px;
-        }
+}
+
+.description-price{
+    font-family: var(--main-font-family);
+    font-weight: var(--bold-font-weight);
+    color: var(--color-purple);
+    line-height: 46px;
+    font-size: 36px;
+}
+
+.description-title {
+    font-family: var(--main-font-family);
+    font-weight: var(--medium-font-weight);
+    line-height: 25px;
+    font-size: 15px;
+    margin-top: 20px;
+    margin-bottom: 6px;
+    color: var(--color-purple);
+    line-height: 42px;
+    font-size: 28px;
 }
 
 .description-list{
     margin-top: 20px;
     margin-bottom: 40px;
+    font-size: 15px;
+}
+
+.choose-btn{
+    background-color: var(--color-purple);
+    border-radius: 24px;
+    width: 232px;
+    height: 45px;
+    color: var(--color-white);
+}
+
+.choose-btn:hover{
+    background-color: var(--color-btn) !important;
 }
 
 .circle{
@@ -76,28 +89,41 @@
     margin-right: 10px;
 }
 
-@media screen and (min-width: 1199px) {
-    .plans {
-        padding: 90px 0px 0px 0px;
+@media screen and (min-width: 1200px) {
+    .plans{
+        padding: 0px;
         margin-left: auto;
         margin-right: auto;
-        width: 937px;
+        margin-top: 90px;
+        width: 926px;
     }
-    .plans-position {
+
+    .plans-position{
+        position: relative;
         flex-direction: row;
         justify-content: space-around;
-        align-items: stretch;
         margin-bottom: 69px;
     }
-    .choose-plan {
-        margin: 40px 34px 40px 34px;
+
+    .choose-plan{
+        position: relative;
         padding: 0px;
+        width: 232px;
+        height: 387px;
+        margin: 40px 0px 0px 0px;
         display: flex;
         flex-direction: column;
+        align-items: stretch;
         justify-content: space-between;
-        width: 232px;
-        >p{
-            margin-top: 40px
-        }
+    }
+
+    .most-popular {
+        position: absolute;
+        left: 100px;
+        top: -55px;
+    }
+
+    .description-list {
+        margin-bottom: 0px;
     }
 }
