--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -2,10 +2,11 @@
   --main-font-family: "Poppins", sans-serif;
   --main-font-style: normal;
   --regular-font-weight: 400;
-  --regular-font-weight: 500;
+  --medium-font-weight: 500;
   --bold-font-weight: 700;
   --color-purple: #231D4F;
   --color-rose: #BB6BD9;
   --color-white: #F5F5FA;
   --color-brown:#F2DAD5;
+  --color-btn:#A847CC;
 }
